force-app/main/default/objects/Case/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>A unique identifier for each customer account in the system.</description>
    <formula>IF(NOT(ISBLANK(Loan_Account__c)),HYPERLINK(&quot;/&quot;+ Loan_Account__r.Id ,Loan_Account__r.Loan_Number__c ,&quot;_self&quot;),
IF(NOT(ISBLANK(Deposit_Account__c)),HYPERLINK(&quot;/&quot;+ Deposit_Account__r.Id , Deposit_Account__r.Deposit_Number__c ,&quot;_self&quot;),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>