force-app/main/default/objects/Case/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The customer&apos;s address.</description>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>