force-app/main/default/objects/Case/fields/Address_Type_Change__c.field-meta.xml
<CustomField>
    <fullName>Address_Type_Change__c</fullName>
    <label>Address Type Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>