force-app/main/default/objects/Case/fields/Address_URL__c.field-meta.xml
<CustomField>
    <fullName>Address_URL__c</fullName>
    <label>Address URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>