force-app/main/default/objects/Case/fields/Ageing_of_case_del2__c.field-meta.xml
<CustomField>
    <fullName>Ageing_of_case_del2__c</fullName>
    <description>Time since the case was created or updated.</description>
    <formula>FORMATDURATION(NOW(), CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing of case</label>
    <type>Text</type>
</CustomField>