force-app/main/default/objects/Case/fields/Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Alert_Date__c</fullName>
    <description>Records the date of an alert or important event.</description>
    <label>Alert Date</label>
    <type>DateTime</type>
</CustomField>