force-app/main/default/objects/Case/fields/Alert_Priority__c.field-meta.xml
<CustomField>
    <fullName>Alert_Priority__c</fullName>
    <description>The priority level of an alert.</description>
    <label>Alert Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>