force-app/main/default/objects/Case/fields/ALERTSTATUS__c.field-meta.xml
<CustomField>
    <fullName>ALERTSTATUS__c</fullName>
    <description>The status or level of an alert related to the record.</description>
    <label>ALERTSTATUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>