force-app/main/default/objects/Case/fields/Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected__c</fullName>
    <description>The total amount collected for a transaction or service.</description>
    <label>Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>