force-app/main/default/objects/Case/fields/Amount_Collected_Towards__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected_Towards__c</fullName>
    <description>Keeps track of the amount collected towards a payment or debt.</description>
    <label>Amount Collected Towards</label>
    <length>255</length>
    <type>Text</type>
</CustomField>