force-app/main/default/objects/Case/fields/Amount_of_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Disbursement__c</fullName>
    <description>The amount disbursed for a transaction.</description>
    <label>Amount of Disbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>