force-app/main/default/objects/Case/fields/Amount_of_the_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_the_Cheque__c</fullName>
    <description>The money value of a submitted cheque.</description>
    <label>Amount of the Cheque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>