force-app/main/default/objects/Case/fields/Amount_Presented_For__c.field-meta.xml
<CustomField>
    <fullName>Amount_Presented_For__c</fullName>
    <description>The amount presented for a specific purpose or transaction.</description>
    <label>Amount Presented For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>