force-app/main/default/objects/Case/fields/Amount_to_be_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_Refunded__c</fullName>
    <description>The total amount to be refunded for a transaction.</description>
    <label>Amount to be Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>