force-app/main/default/objects/Case/fields/Any_Change_in_Demographic_Details__c.field-meta.xml
<CustomField>
    <fullName>Any_Change_in_Demographic_Details__c</fullName>
    <description>Indicates if there are changes in demographic details.</description>
    <label>Any Change in Demographic Details?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>