force-app/main/default/objects/Case/fields/Any_linked_loan_s__c.field-meta.xml
<CustomField>
    <fullName>Any_linked_loan_s__c</fullName>
    <description>Specifies whether there are any other loans linked to the current transaction or customer.</description>
    <label>Any linked loan(s)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>