force-app/main/default/objects/Case/fields/Appeal_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Reference_Number__c</fullName>
    <label>Appeal Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>