force-app/main/default/objects/Case/fields/Approval_Given__c.field-meta.xml
<CustomField>
    <fullName>Approval_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <description>UC -16 - To check if the approval is given before changing the owner of SR</description>
    <label>Approval Given</label>
    <type>Checkbox</type>
</CustomField>