force-app/main/default/objects/Case/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>The status of an approval process.</description>
    <label>Repayment Pouch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discrepant</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>