force-app/main/default/objects/Case/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <description>Records the name of the person who approved a particular action or request.</description>
    <label>Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>