force-app/main/default/objects/Case/fields/Assign_Back_To_Creator__c.field-meta.xml
<CustomField>
    <fullName>Assign_Back_To_Creator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>UC - 8 - To assign the SR back to creator when this more info. is required</description>
    <label>Assign Back To Creator</label>
    <type>Checkbox</type>
</CustomField>