force-app/main/default/objects/Case/fields/Auto_Top_Up_Calling_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Top_Up_Calling_Status__c</fullName>
    <label>Auto Top Up Calling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow up lead</fullName>
            </value>
            <value>
                <fullName>LAN Ref Generated</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Customer interested, Technical Issue on Top Up portal</fullName>
            </value>
            <value>
                <fullName>Interested Exceed Amount</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Customer interested</fullName>
            </value>
            <value>
                <fullName>Not Contactable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>