force-app/main/default/objects/Case/fields/AWB_Number__c.field-meta.xml
<CustomField>
    <fullName>AWB_Number__c</fullName>
    <description>Records the name of the person who approved a particular action or request.</description>
    <label>AWB Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>