force-app/main/default/objects/Case/fields/AWB_Number_Branch__c.field-meta.xml
<CustomField>
    <fullName>AWB_Number_Branch__c</fullName>
    <description>Air Waybill (AWB) number and its branch.</description>
    <label>AWB Number(Branch)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>