force-app/main/default/objects/Case/fields/Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_No__c</fullName>
    <description>The account number associated with a bank account.</description>
    <label>Bank Account No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>