force-app/main/default/objects/Case/fields/Beneficiary_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Account_Number__c</fullName>
    <description>The account number of a beneficiary.</description>
    <label>Beneficiary Account Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>