force-app/main/default/objects/Case/fields/Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Name__c</fullName>
    <description>Stores the name of the beneficiary related to a specific transaction or process.</description>
    <label>Beneficiary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>