force-app/main/default/objects/Case/fields/Bitly__c.field-meta.xml
<CustomField>
    <fullName>Bitly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bitly</label>
    <type>Checkbox</type>
</CustomField>