force-app/main/default/objects/Case/fields/Bouncing_in_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Bouncing_in_last_12_months__c</fullName>
    <description>Indicates if there have been instances of bouncing payments in the last 12 months.</description>
    <label>Bouncing in last 12 months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>