force-app/main/default/objects/Case/fields/Bouncing_in_last_24_months__c.field-meta.xml
<CustomField>
    <fullName>Bouncing_in_last_24_months__c</fullName>
    <description>The level of access to an object or record.</description>
    <label>Bouncing in last 24 months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>