force-app/main/default/objects/Case/fields/Branch_Description__c.field-meta.xml
<CustomField>
    <fullName>Branch_Description__c</fullName>
    <label>Branch Description</label>
    <type>TextArea</type>
</CustomField>