force-app/main/default/objects/Case/fields/Branch_Master__c.field-meta.xml
<CustomField>
    <fullName>Branch_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch or location where a payment was made.</description>
    <label>Payment Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Branch_Master__c.Branch_Type__c</field>
            <operation>notEqual</operation>
            <value>Hub</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Branch_Master__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>