force-app/main/default/objects/Case/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <formula>IF( NOT(ISNULL(Loan_Account__c)), Loan_Account__r.ServicingBranch__r.Name , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Name</label>
    <type>Text</type>
</CustomField>