force-app/main/default/objects/Case/fields/ByPass__c.field-meta.xml
<CustomField>
    <fullName>ByPass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass</label>
    <type>Checkbox</type>
</CustomField>