force-app/main/default/objects/Case/fields/CACB__c.field-meta.xml
<CustomField>
    <fullName>CACB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CACB</label>
    <type>Checkbox</type>
</CustomField>