force-app/main/default/objects/Case/fields/Calling_Status__c.field-meta.xml
<CustomField>
    <fullName>Calling_Status__c</fullName>
    <label>Calling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested. Will submit request later.</fullName>
            </value>
            <value>
                <fullName>Interested and file logged in</fullName>
            </value>
            <value>
                <fullName>Not interested. Amount is low</fullName>
            </value>
            <value>
                <fullName>Not interested. ROI is high</fullName>
            </value>
            <value>
                <fullName>Not interested. Other reasons.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>