force-app/main/default/objects/Case/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Name of the marketing campaign associated with a lead or opportunity.</description>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>