force-app/main/default/objects/Case/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <description>The unique identifier for a marketing campaign.</description>
    <label>CampaignId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>