force-app/main/default/objects/Case/fields/Case_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Branch_Name__c</fullName>
    <formula>CASE($User.CG_LOCATIONCODE__c,&quot;311332&quot;,1,&quot;31123&quot;,2,&quot;31119&quot;,3,&quot;31118&quot;,4,&quot;91000258&quot;,5,&quot;31089&quot;,6,&quot;42662217&quot;,7,&quot;42670873&quot;,8,&quot;41005416&quot;,9,&quot;31159&quot;,10,&quot;90003230&quot;,11,&quot;31145&quot;,12,&quot;41005415&quot;,13,&quot;31160&quot;,14,&quot;42670874&quot;,15,&quot;31151&quot;,16,&quot;90003741&quot;,17,&quot;31107&quot;,18,&quot;31121&quot;,19,&quot;41005948&quot;,20,&quot;91000120&quot;,21,&quot;41005951&quot;,22,&quot;41005417&quot;,23,&quot;41005418&quot;,24,&quot;41005419&quot;,25,&quot;41005420&quot;,26,&quot;41005773&quot;,27,&quot;31115&quot;,28,&quot;31099&quot;,29,&quot;31106&quot;,30,&quot;31109&quot;,31,&quot;31111&quot;,32,&quot;41009654&quot;,33,&quot;31122&quot;,34,&quot;31217&quot;,35,&quot;31169&quot;,36,&quot;41005950&quot;,37,&quot;31162&quot;,38,&quot;20000125&quot;,39,&quot;91002058&quot;,40,&quot;91000602&quot;,41,&quot;91001027&quot;,42,&quot;91001037&quot;,43,&quot;91000604&quot;,44,&quot;90003740&quot;,45,&quot;90003816&quot;,46,&quot;91000066&quot;,47,&quot;91000257&quot;,48,&quot;91000072&quot;,49,&quot;91001171&quot;,50,&quot;91001168&quot;,51,&quot;90003719&quot;,52,&quot;91000109&quot;,53,&quot;91001624&quot;,54,&quot;90004129&quot;,55,&quot;91000416&quot;,56,&quot;91001035&quot;,57,&quot;91000108&quot;,58,&quot;91000603&quot;,59,&quot;91001714&quot;,60,&quot;90003618&quot;,61,&quot;90003737&quot;,62,&quot;90003739&quot;,63,&quot;91000920&quot;,64,&quot;90003868&quot;,65,&quot;90003936&quot;,66,&quot;90003937&quot;,67,&quot;91000294&quot;,68,&quot;42670872&quot;,69,&quot;90003738&quot;,70,&quot;91000433&quot;,71,&quot;91001038&quot;,72,&quot;91001525&quot;,73,&quot;91001588&quot;,74,&quot;42670849&quot;,75,&quot;91001534&quot;,76,&quot;90003736&quot;,77,&quot;91000119&quot;,78,&quot;91001533&quot;,79,&quot;91001535&quot;,80,&quot;91001567&quot;,81,&quot;91001569&quot;,82,&quot;91001631&quot;,83,&quot;91001661&quot;,84,&quot;90003376&quot;,85,&quot;42670871&quot;,86,&quot;90003330&quot;,87,&quot;90004130&quot;,88,&quot;90003756&quot;,89,&quot;91000432&quot;,90,&quot;91000071&quot;,91,&quot;91000226&quot;,92,&quot;90004128&quot;,93,&quot;91000053&quot;,94,&quot;91000225&quot;,95,&quot;91000464&quot;,96,&quot;1301&quot;,97,&quot;42662239&quot;,98,&quot;1300&quot;,99,&quot;31208&quot;,100,&quot;31140&quot;,101,&quot;31141&quot;,102,&quot;31148&quot;,103,&quot;31152&quot;,104,&quot;41005568&quot;,105,&quot;31078&quot;,106,&quot;91011409&quot;,107,&quot;91027323&quot;,108,&quot;91000266&quot;,109,&quot;91027306&quot;,110,&quot;91027314&quot;,111,&quot;91027294&quot;,112,&quot;91027301&quot;,113,&quot;91027278&quot;,114,&quot;91027312&quot;,115,&quot;91027207&quot;,116,&quot;91027290&quot;,117,&quot;91027332&quot;,118,&quot;91027287&quot;,119,&quot;91027308&quot;,120,&quot;91027307&quot;,121,&quot;91027329&quot;,122,&quot;91027291&quot;,123,&quot;91027209&quot;,124,&quot;91027293&quot;,125,&quot;91027288&quot;,126,&quot;91027093&quot;,127,&quot;91027099&quot;,128,&quot;91027105&quot;,129,&quot;91027303&quot;,130,&quot;91027206&quot;,131,&quot;91027075&quot;,132,&quot;91027334&quot;,133,&quot;91027311&quot;,134,&quot;91027077&quot;,135,&quot;91027103&quot;,136,&quot;91027283&quot;,137,&quot;91027289&quot;,138,&quot;91027351&quot;,139,&quot;91027111&quot;,140,&quot;91027089&quot;,141,&quot;91027098&quot;,142,&quot;91027102&quot;,143,&quot;91027211&quot;,144,&quot;91027327&quot;,145,&quot;91027210&quot;,146,&quot;91027318&quot;,147,&quot;91027097&quot;,148,&quot;91027094&quot;,149,&quot;91027092&quot;,150,&quot;91027328&quot;,151,&quot;91027095&quot;,152,&quot;91027076&quot;,153,&quot;91027096&quot;,154,&quot;91027085&quot;,155,&quot;91027100&quot;,156,&quot;91027082&quot;,157,&quot;91027083&quot;,158,&quot;91027212&quot;,159,&quot;91027080&quot;,160,&quot;91027352&quot;,161,&quot;91027109&quot;,162,&quot;91027113&quot;,163,&quot;91027101&quot;,164,&quot;91027081&quot;,165,&quot;91027304&quot;,166,&quot;91027090&quot;,167,&quot;91027284&quot;,168,&quot;91027078&quot;,169,&quot;91027079&quot;,170,&quot;91027335&quot;,171,&quot;91027208&quot;,172,&quot;91027333&quot;,173,&quot;91027336&quot;,174,&quot;91027110&quot;,175,&quot;91027084&quot;,176,&quot;91027302&quot;,177,&quot;91027104&quot;,178,&quot;91027112&quot;,179,&quot;91027106&quot;,180,&quot;91027115&quot;,181,&quot;91027317&quot;,182,&quot;42668758&quot;,183,&apos;91027091&apos;,184,&quot;91027107&quot;,185,&apos;91027316&apos;,186,&quot;91027114&quot;,187,&quot;91027331&quot;,188,&quot;91027315&quot;,189,&quot;91027309&quot;,190,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Branch Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>