force-app/main/default/objects/Case/fields/Case_Categories_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Categories_Team__c</fullName>
    <label>Case Categories Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>