force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMI/PEMI related</fullName>
            </value>
            <value>
                <fullName>Tracking of QR Code Payment</fullName>
            </value>
            <value>
                <fullName>Re-KYC</fullName>
            </value>
            <value>
                <fullName>Insurance Related</fullName>
            </value>
            <value>
                <fullName>Recovery Related( Internal SR)</fullName>
            </value>
            <value>
                <fullName>Receipt book related( Internal SR)</fullName>
            </value>
            <value>
                <fullName>Scan Copy of Documents</fullName>
            </value>
            <value>
                <fullName>Online Payments</fullName>
            </value>
            <value>
                <fullName>Centralized Refunds</fullName>
            </value>
            <value>
                <fullName>ROI Conversion</fullName>
            </value>
            <value>
                <fullName>Demographic Details</fullName>
            </value>
            <value>
                <fullName>Collateral/Security Related</fullName>
            </value>
            <value>
                <fullName>Deliverable Related</fullName>
            </value>
            <value>
                <fullName>MODT Registration</fullName>
            </value>
            <value>
                <fullName>Refund of Processing Fees</fullName>
            </value>
            <value>
                <fullName>Centralized Refund</fullName>
            </value>
            <value>
                <fullName>Loan Application Status</fullName>
            </value>
            <value>
                <fullName>Collateral Related</fullName>
            </value>
            <value>
                <fullName>Subsequent Disbursement</fullName>
            </value>
            <value>
                <fullName>AML SR</fullName>
            </value>
            <value>
                <fullName>Deliverability Related</fullName>
            </value>
            <value>
                <fullName>Disbursement Related</fullName>
            </value>
            <value>
                <fullName>Recovery related</fullName>
            </value>
            <value>
                <fullName>SR Creation from Customer Portal</fullName>
            </value>
            <value>
                <fullName>MODT related</fullName>
            </value>
            <value>
                <fullName>Loan Closure</fullName>
            </value>
            <value>
                <fullName>ROI Revision-RWR Case</fullName>
            </value>
            <value>
                <fullName>Forgot User ID</fullName>
            </value>
            <value>
                <fullName>FD related</fullName>
            </value>
            <value>
                <fullName>Broker Activation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>