force-app/main/default/objects/Case/fields/Case_Category_Formula__c.field-meta.xml
<CustomField>
    <fullName>Case_Category_Formula__c</fullName>
    <formula>Text( Interaction_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Category</label>
    <type>Text</type>
</CustomField>