force-app/main/default/objects/Case/fields/Case_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Creation_Date__c</fullName>
    <description>The date when a case was created.</description>
    <label>Case Created Date</label>
    <type>DateTime</type>
</CustomField>