force-app/main/default/objects/Case/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <formula>CASE(RecordType.Name, 
&quot;Appeal&quot;, &quot;Appeal&quot;, 
&quot;Complaint&quot;, &quot;Complaint&quot;, 
&quot;Service Request&quot;, &quot;Service Request&quot;, 
&quot;Query&quot;, &quot;Query&quot;, &quot;Query&quot;,
&quot;Default&quot;, &quot;Default&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Type</label>
    <type>Text</type>
</CustomField>