force-app/main/default/objects/Case/fields/Case_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Case_Subcategory__c</fullName>
    <label>Case Subcategory1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example</fullName>
            </value>
            <value>
                <fullName>Request for Handing over of property papers for closed loan</fullName>
            </value>
            <value>
                <fullName>Revision in Due date</fullName>
            </value>
            <value>
                <fullName>Tracking of QR Code Payment</fullName>
            </value>
            <value>
                <fullName>Re-KYC Document Submission</fullName>
            </value>
            <value>
                <fullName>Re-KYC Rejection Curing</fullName>
            </value>
            <value>
                <fullName>Request for Insurance Cancellation</fullName>
            </value>
            <value>
                <fullName>Status of Insurance Refund from COPS</fullName>
            </value>
            <value>
                <fullName>Copy of Insurance Policy</fullName>
            </value>
            <value>
                <fullName>Auction property-EMD collection</fullName>
            </value>
            <value>
                <fullName>Issuance of receipt book</fullName>
            </value>
            <value>
                <fullName>Scan Copy of Bounce Memo</fullName>
            </value>
            <value>
                <fullName>Request for Scan Copy of Documents</fullName>
            </value>
            <value>
                <fullName>Scan Copy of Property Documents</fullName>
            </value>
            <value>
                <fullName>Scan copy of Loan Agreement</fullName>
            </value>
            <value>
                <fullName>Virtual Account SMS</fullName>
            </value>
            <value>
                <fullName>Refund - Loan accounts</fullName>
            </value>
            <value>
                <fullName>Refund - Deposit accounts</fullName>
            </value>
            <value>
                <fullName>CIBIL Trigger</fullName>
            </value>
            <value>
                <fullName>Modifications in Demographic details</fullName>
            </value>
            <value>
                <fullName>Release of Collateral / Liquidation of Security</fullName>
            </value>
            <value>
                <fullName>Temporary release of Original property documents</fullName>
            </value>
            <value>
                <fullName>Request for deliverable</fullName>
            </value>
            <value>
                <fullName>MODT Registration</fullName>
            </value>
            <value>
                <fullName>Request for Refund of Processing Fees</fullName>
            </value>
            <value>
                <fullName>Refund of Excess Amount</fullName>
            </value>
            <value>
                <fullName>Closure of loan account</fullName>
            </value>
            <value>
                <fullName>Status of Loan Application</fullName>
            </value>
            <value>
                <fullName>Collect &amp; Update Property documents from builder</fullName>
            </value>
            <value>
                <fullName>Request for Subsequent Disbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>