force-app/main/default/objects/Case/fields/Case_Subcategory_Formula__c.field-meta.xml
<CustomField>
    <fullName>Case_Subcategory_Formula__c</fullName>
    <formula>TEXT ( Interaction_Sub__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Subcategory</label>
    <type>Text</type>
</CustomField>