force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Category or type of customer support case.</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Type</label>
    <type>Text</type>
</CustomField>