force-app/main/default/objects/Case/fields/Case_WhatsApp_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_WhatsApp_Number__c</fullName>
    <description>The customer&apos;s WhatsApp contact number for support cases.</description>
    <formula>Account.Whatsapp_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case WhatsApp Number</label>
    <type>Text</type>
</CustomField>