force-app/main/default/objects/Case/fields/CaseR_Type__c.field-meta.xml
<CustomField>
    <fullName>CaseR_Type__c</fullName>
    <description>The types or categories of customer support cases.</description>
    <formula>CASE(RecordType.Name, 
&quot;Appeal&quot;, &quot;Appeal&quot;, 
&quot;Complaint&quot;, &quot;Complaint&quot;, 
&quot;Service Request&quot;, &quot;Service Request&quot;, 
&quot;Query&quot;, &quot;Query&quot;, &quot;Query&quot;,
&quot;Default&quot;, &quot;Default&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Types</label>
    <type>Text</type>
</CustomField>