force-app/main/default/objects/Case/fields/Categorisation_Team__c.field-meta.xml
<CustomField>
    <fullName>Categorisation_Team__c</fullName>
    <label>Categorisation Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>