force-app/main/default/objects/Case/fields/Categorisation_User__c.field-meta.xml
<CustomField>
    <fullName>Categorisation_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categorisation User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CategorisationUser</relationshipName>
    <type>Lookup</type>
</CustomField>