force-app/main/default/objects/Case/fields/Category_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Category_Timestamp__c</fullName>
    <description>Timestamp associated with a specific category or classification.</description>
    <label>Case Category  Date Time Stamp</label>
    <type>DateTime</type>
</CustomField>