force-app/main/default/objects/Case/fields/Charges_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Charges_Applicable__c</fullName>
    <description>Shows if charges are applicable to a transaction or service.</description>
    <label>Charges Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Example</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>