force-app/main/default/objects/Case/fields/Charges_Applicable_text__c.field-meta.xml
<CustomField>
    <fullName>Charges_Applicable_text__c</fullName>
    <description>Shows if charges apply to a transaction or service.</description>
    <label>Charges Applicable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>