force-app/main/default/objects/Case/fields/Charges_Due__c.field-meta.xml
<CustomField>
    <fullName>Charges_Due__c</fullName>
    <formula>Loan_Account__r.Charges_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charges Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>