force-app/main/default/objects/Case/fields/Charges_Updated_in_LMS__c.field-meta.xml
<CustomField>
    <fullName>Charges_Updated_in_LMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if charges were updated in the Loan Management System.</description>
    <label>Charges Updated in LMS</label>
    <type>Checkbox</type>
</CustomField>